--- a/notebooks/getting_started.ipynb
+++ b/notebooks/getting_started.ipynb
@@ -34,9 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "libyaml is not installed in your environment. This can make OpenFisca slower to start. Once you have installed libyaml, run 'pip uninstall pyyaml && pip install pyyaml --no-cache-dir' so that it is used in your Python environment.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from pprint import pprint  # data pretty printer\n",
     "\n",
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +191,7 @@
        "array([129.99], dtype=float32)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,14 +217,14 @@
     "\n",
     "You have then to import the module extension corresponding to the reform of your concern.\n",
     "\n",
-    "Here we choose the fiscal reform of Landais, Piketty and Saez on the income tax (http://www.revolution-fiscale.fr/la-reforme-proposee). \n",
+    "Here we choose the fiscal reform of Landais, Piketty and Saez on the income tax ( http://www.revolution-fiscale.fr/la-reforme-proposee ). \n",
     "\n",
     "It is already implemented in OpenFisca under the name `landais_piketty_saez` ."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,57 +251,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create the scenario you want to test."
+    "Create the test case you want to test."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def init_profile(scenario):\n",
-    "    scenario.init_single_entity(\n",
-    "        period = '2013',\n",
-    "        parent1 = dict(\n",
-    "            age = 40,\n",
-    "            salaire_de_base = 50000,\n",
-    "            ),\n",
-    "        )\n",
-    "    return scenario"
+    "REFORM_TEST_CASE = {\n",
+    "    'individus': {\n",
+    "        'parent1': {\n",
+    "            'age': {'2013-01': 40},\n",
+    "            'salaire_de_base': {'2013': 50000}\n",
+    "        }\n",
+    "    },\n",
+    "    'foyers_fiscaux': {\n",
+    "        'foyer_fiscal1': {\n",
+    "            'declarants': ['parent1']\n",
+    "        }\n",
+    "    },\n",
+    "    'menages': {    \n",
+    "        'menage1': {\n",
+    "            'personne_de_reference': ['parent1'],\n",
+    "        }\n",
+    "    },    \n",
+    "    'familles': {\n",
+    "        'famille1': {\n",
+    "            'parents': ['parent1'],\n",
+    "        }\n",
+    "    }\n",
+    "}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the reform"
+    "With the reform:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'ScenarioAdapter' object has no attribute 'init_single_entity'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-109-7aa20c4586c9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Indicate that you want to perfom the reform on this scenario\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mreform_scenario\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minit_profile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreform\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnew_scenario\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#Simulate the reform\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mreform_simulation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreform_scenario\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnew_simulation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-108-c906f92b0a94>\u001b[0m in \u001b[0;36minit_profile\u001b[0;34m(scenario)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0minit_profile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscenario\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     scenario.init_single_entity(\n\u001b[0m\u001b[1;32m      3\u001b[0m         \u001b[0mperiod\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'2013'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         parent1 = dict(\n\u001b[1;32m      5\u001b[0m             \u001b[0mage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m40\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'ScenarioAdapter' object has no attribute 'init_single_entity'"
-     ]
+     "data": {
+      "text/plain": [
+       "array([13554.031], dtype=float32)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Indicate that you want to perfom the reform on this scenario\n",
-    "reform_scenario = init_profile(reform.new_scenario())\n",
+    "# Indicate that you want to perfom the reform on this test case\n",
+    "simulation_builder = SimulationBuilder()\n",
     "\n",
-    "#Simulate the reform\n",
-    "reform_simulation = reform_scenario.new_simulation() \n",
+    "# Simulate the reform\n",
+    "reform_simulation = simulation_builder.build_from_entities(reform, REFORM_TEST_CASE)\n",
     "\n",
     "# Choose the variable you want to calcul : here the disposable income, \"revenu_disponible\"\n",
     "reform_simulation.calculate('revenu_disponible', '2013')"
@@ -307,15 +328,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([33979.367], dtype=float32)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Indicate that you want to perfom the standard system on this scenario\n",
-    "baseline_scenario = init_profile(tax_benefit_system.new_scenario())\n",
-    "\n",
-    "# Simulate the standard scenario\n",
-    "baseline_simulation = baseline_scenario.new_simulation()\n",
+    "# Indicate that you want to perfom the standard system on the same test case\n",
+    "simulation_builder = SimulationBuilder()\n",
+    "baseline_simulation = simulation_builder.build_from_entities(tax_benefit_system, REFORM_TEST_CASE)\n",
     "\n",
     "# Choose the variable you want to calcul\n",
     "baseline_simulation.calculate('revenu_disponible', '2013')"
@@ -323,9 +353,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "$.getScript('https://kmahelona.github.io/ipython_notebook_goodies/ipython_notebook_toc.js')\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%javascript\n",
     "$.getScript('https://kmahelona.github.io/ipython_notebook_goodies/ipython_notebook_toc.js')"
