--- a/notebooks/how_to_handle_periods.ipynb
+++ b/notebooks/how_to_handle_periods.ipynb
@@ -689,13 +689,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Income tax on 2015 [-2401.]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Income tax on 2015 [-2401.]\n",
       "Income tax on 2016 [-2391.]\n"
      ]
     }
